:building_construction: + Add Specification Migration and fix code to adapt postgres
